--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="body">
     <header class="header">
         <div class="container">
-            <nav>
+            <nav class="nav">
                 <div class="logo">
                     <img src="images/Tesla-Wordmark-Red.png" alt="">
                 </div>
-                <ul class="menu-1">
-                    <li><a href="" class="item-1 menu__item active">Model S</a></li>
-                    <li><a href="" class="item2 menu__item">Model X</a></li>
-                    <li><a href="" class="item3 menu__item">Model 3</a></li>
-                    <li><a href="" class="item4 menu__item">Roadster</a></li>
-                    <li><a href="" class="item5 menu__item">Energy</a></li>
+                <ul class="menu">
+                    <li><a href="" class="menu__item-s">Model S</a></li>
+                    <li><a href="" class="menu__item-x">Model X</a></li>
+                    <li><a href="" class="menu__item-3">Model 3</a></li>
+                    <li><a href="" class="menu__item-roadster">Roadster</a></li>
+                    <li><a href="" class="menu__item-energy">Energy</a></li>
                 </ul>
                 <ul class="menu-2">
-                    <li><a href="" class="menu__item">Магазин</a></li>
-                    <li><a href="" class="menu__item">Войти</a></li>
-                    <li><img src="images/menu.png" alt=""></li>
+                    <li><a href="" class="menu-2__item">Магазин</a></li>
+                    <li><a href="" class="menu-2__item">Войти</a></li>
+                    <li><img class="menu-2__img-burger" src="images/menu.png" alt=""></li>
                 </ul>
             </nav>
             <div class="tesla-title">
