добавил классы изображениям, параграфам и заголовкам

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesla</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="body">
     <header class="header">
         <div class="container">
             <nav class="nav">
                 <div class="logo">
-                    <img src="images/Tesla-Wordmark-Red.png" alt="">
+                    <img class="logo__pic" src="images/Tesla-Wordmark-Red.png" alt="">
                 </div>
                 <ul class="menu">
                     <li><a href="" class="menu__item-s">Model S</a></li>
@@ -27,8 +29,8 @@
                 </ul>
             </nav>
             <div class="tesla-title">
-                <h1>Model S</h1>
-                <p>Добро пожаловать в будущее!</p>
+                <h1 class="tesla-title__subtitle">Model S</h1>
+                <p class="tesla-title__desk">Добро пожаловать в будущее!</p>
                 <img class="tesla-title__car-1" src="images/tesla-png-tesla-png-hd-1636-1.png" alt="">
                 <img class="tesla-title__car-2" src="images/tesla-png-tesla-png-hd-1636.png" alt="">
             </div>
@@ -44,7 +46,7 @@
                 <div class="test-drive">
                     <img class="test-drive__responsive" src="images/steering-wheel.png" alt="">
                     <img class="test-drive__mobile" src="images/steering-wheel.svg" alt="">
-                    <p>Тест драйв</p>
+                    <p class="test-drive__desk">Тест драйв</p>
                     <div class="order">Заказать</div>
                 </div>
             </div>
@@ -55,28 +57,29 @@
         <div class="container">
             <div class="main__inner">
                 <div class="left-section">
-                    <h2>Model S</h2>
+                    <h2 class="left-section__title">Model S</h2>
                 </div>
                 <div class="right-section">
                     <div class="main-top">
-                        <h3>Будущее вождения</h3>
-                        <p>Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и
+                        <h3 class="right-section__title">Будущее вождения</h3>
+                        <p class="right-section__text">Модель S обладает лучшей в своем классе вместимостью: в машине
+                            поместится до пяти взрослых и
                             двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая
                             инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша
                             обеспечивает просторный интерьер для каждого пассажира.</p>
                     </div>
                     <div class="right-section__img">
-                        <img class="right-section__img-1" src="images/Display.png" alt="">
-                        <img class="right-section__img-2" src="images/Wireless-soft.png" alt="">
-                        <img class="right-section__img-3" src="images/Bag-capacity.png" alt="">
+                        <img class="right-section__img-display" src="images/Display.png" alt="">
+                        <img class="right-section__img-wireless" src="images/Wireless-soft.png" alt="">
+                        <img class="right-section__img-bag" src="images/Bag-capacity.png" alt="">
                     </div>
                     <div class="features">
                         <div class="features-info">
-                            <img src="images/Group.svg" alt="">
-                            <p>узнать больше</p>
+                            <img class="features-info__img" src="images/Group.svg" alt="">
+                            <p class="features-info__desk">узнать больше</p>
                         </div>
                         <div class="order-2">
-                            <p>заказать</p>
+                            <p class="order-2__desk">заказать</p>
                         </div>
                     </div>
                 </div>
@@ -87,8 +90,9 @@
         <div class="container">
             <div class="footer__left">
                 <div class="footer__left-head">
-                    <h3>Самый безопасный автомобиль в мире</h3>
-                    <p>Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и
+                    <h3 class="footer__title">Самый безопасный автомобиль в мире</h3>
+                    <p class="footer__text">Модель S достигла наивысшей оценки безопасности любого автомобиля,
+                        когда-либо испытанного, и
                         установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на
                         переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
                 </div>
@@ -148,11 +152,11 @@
                     <div class="features">
                         <img class="security" src="images/security.png" alt="">
                         <div class="features-info">
-                            <img src="images/Group.svg" alt="">
-                            <p>узнать больше</p>
+                            <img class="features-info__img" src="images/Group.svg" alt="">
+                            <p class="features-info__desk">узнать больше</p>
                         </div>
                         <div class="order-2">
-                            <p>заказать</p>
+                            <p class="order-2__desk">заказать</p>
                         </div>
                     </div>
                 </div>
@@ -171,4 +175,5 @@
         </div>
     </footer>
 </body>
+
 </html>
