1)header раздели на 3 тега, убрал ul, li
2)убрал цифры из классов
3)прописал классы всем тегам

--- a/index.html
+++ b/index.html
@@ -9,37 +9,35 @@
 <body class="body">
     <header class="header">
         <div class="container">
+            <div class="logo">
+                <img class="logo__pic" src="images/Tesla-Wordmark-Red.png" alt="">
+            </div>
             <nav class="nav">
-                <div class="logo">
-                    <img class="logo__pic" src="images/Tesla-Wordmark-Red.png" alt="">
-                </div>
-                <ul class="menu">
-                    <li><a href="" class="menu__item-s">Model S</a></li>
-                    <li><a href="" class="menu__item-x">Model X</a></li>
-                    <li><a href="" class="menu__item-3">Model 3</a></li>
-                    <li><a href="" class="menu__item-roadster">Roadster</a></li>
-                    <li><a href="" class="menu__item-energy">Energy</a></li>
-                </ul>
-                <ul class="menu-2">
-                    <li><a href="" class="menu-2__item">Магазин</a></li>
-                    <li><a href="" class="menu-2__item">Войти</a></li>
-                    <li><img class="menu-2__img-burger" src="images/menu.png" alt=""></li>
-                </ul>
+                <a href="" class="nav__menu-3">Model 3</a>
+                <a href="" class="nav__menu-s">Model S</a>
+                <a href="" class="nav__menu-energy">Energy</a>
+                <a href="" class="nav__menu-x">Model X</a>
+                <a href="" class="nav__menu-roadster">Roadster</a>
+            <div class="menu">
+                <a href="" class="menu__item">Магазин</a>
+                <a href="" class="menu__item">Войти</a>
+                <img class="menu__img-burger" src="images/menu.png" alt="">
+            </div>  
             </nav>
             <div class="tesla-title">
                 <h1 class="tesla-title__subtitle">Model S</h1>
                 <p class="tesla-title__desk">Добро пожаловать в будущее!</p>
-                <img class="tesla-title__car-1" src="images/tesla-png-tesla-png-hd-1636-1.png" alt="">
-                <img class="tesla-title__car-2" src="images/tesla-png-tesla-png-hd-1636.png" alt="">
+                <img class="tesla-title__car-big" src="images/tesla-png-tesla-png-hd-1636-1.png" alt="">
+                <img class="tesla-title__car-small" src="images/tesla-png-tesla-png-hd-1636.png" alt="">
             </div>
             <div class="tesla-info-block">
                 <div class="tesla-info">
-                    <img class="info-block__img-1" src="images/Group-7.svg" alt="">
-                    <img class="info-block__img-2" src="images/Group-16-ipad.png" alt="">
+                    <img class="info-block__img-small" src="images/Group-7.svg" alt="">
+                    <img class="info-block__img-big" src="images/Group-16-ipad.png" alt="">
                 </div>
                 <div class="info-block">
-                    <img class="info-block__mobile-1" src="images/Group-8-mobi.png" alt="">
-                    <img class="info-block__mobile-2" src="images/Group-9-mobi.png" alt="">
+                    <img class="info-block__mobile-right" src="images/Group-8-mobi.png" alt="">
+                    <img class="info-block__mobile-left" src="images/Group-9-mobi.png" alt="">
                 </div>
                 <div class="test-drive">
                     <img class="test-drive__responsive" src="images/steering-wheel.png" alt="">
@@ -76,8 +74,8 @@
                             <img class="features-info__img" src="images/Group.svg" alt="">
                             <p class="features-info__desk">узнать больше</p>
                         </div>
-                        <div class="order-2">
-                            <p class="order-2__desk">заказать</p>
+                        <div class="features__order">
+                            <p class="features__order-desk">заказать</p>
                         </div>
                     </div>
                 </div>
@@ -99,52 +97,52 @@
                         <div class="rating__title">Спереди</div>
                     </div>
                     <div class="rating__star">
-                        <img src="images/Star.png" alt="">
-                        <img src="images/Star.png" alt="">
-                        <img src="images/Star.png" alt="">
-                        <img src="images/Star.png" alt="">
-                        <img src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
                     </div>
                 </div>
                 <div class="rating">
                     <div class="rating__title">Сбоку</div>
                 </div>
                 <div class="rating__star">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
                 </div>
                 <div class="rating">
                     <div class="rating__title">Сбоку<span class="rating__add">(стойка)</span></div>
                 </div>
                 <div class="rating__star">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
                 </div>
                 <div class="rating">
                     <div class="rating__title">Водитель</div>
                 </div>
                 <div class="rating__star">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
+                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
                 </div>
                 <div class="rating">
                     <div class="rating__title">Пассажир</div>
                 </div>
                 <div class="rating__star">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
-                    <img src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
                 </div>
                 <div class="footer__left-bottom">
                     <div class="features">
@@ -153,21 +151,21 @@
                             <img class="features-info__img" src="images/Group.svg" alt="">
                             <p class="features-info__desk">узнать больше</p>
                         </div>
-                        <div class="order-2">
-                            <p class="order-2__desk">заказать</p>
+                        <div class="features__order">
+                            <p class="features__order-desk">заказать</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="footer__right">
-                <div class="footer__info-1">
-                    <img src="images/Car-frame-pc.png" alt="">
+                <div class="right-pc">
+                    <img class="right-pc__img" src="images/Car-frame-pc.png" alt="">
                 </div>
-                <div class="footer__info-2">
-                    <img src="images/Car-frame-mobi.png" alt="">
+                <div class="right-mobi">
+                    <img class="right-mobi__img" src="images/Car-frame-mobi.png" alt="">
                 </div>
-                <div class="footer__info-3">
-                    <img src="images/Car-frame-ipad.png" alt="">
+                <div class="right-ipad">
+                    <img class="right-ipad__img" src="images/Car-frame-ipad.png" alt="">
                 </div>
             </div>
         </div>
