убрал ненужные шрифты

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesla</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="body">
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <img class="logo__pic" src="images/Tesla-Wordmark-Red.png" alt="">
+                <img class="nav__logo" src="images/Tesla-Wordmark-Red.png" alt="">
                 <a href="" class="nav__menu-s">Model S</a>
                 <a href="" class="nav__menu-x">Model X</a>
                 <a href="" class="nav__menu-3">Model 3</a>
@@ -20,13 +20,13 @@
                 <div class="menu">
                     <a href="" class="menu__item">Магазин</a>
                     <a href="" class="menu__item">Войти</a>
-                    <img class="menu__img-burger" src="images/menu.png" alt="">
+                    <img class="menu__img-burger" src="images/burger.svg" alt="">
                 </div>
             </nav>
             <div class="tesla-title">
                 <h1 class="tesla-title__subtitle">Model S</h1>
                 <p class="tesla-title__desk">Добро пожаловать в будущее!</p>
-                <img class="tesla-title__car-pc" src="images/tesla-png-tesla-png-hd-pc.png" alt="">
+                <img class="tesla-title__car-pc" src="images/tesla-png-tesla-png-pc.png" alt="">
                 <img class="tesla-title__car-mobi" src="images/tesla-png-tesla-png-hd-mobi.png" alt="">
                 <img class="tesla-title__car-ipad" src="images/tesla-png-tesla-png-hd-ipad.png" alt="">
             </div>
