--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
             </div>
             <div class="tesla-info-block">
                 <div class="info-block">
-                    <img class="info-block__img-small" src="images/Group-7.svg" alt="">
-                    <img class="info-block__img-big" src="images/Group-16-ipad.png" alt="">
+                    <img class="info-block__img-pc" src="images/Group-7-pc.svg" alt="">
+                    <img class="info-block__img-ipad" src="images/Group-16-ipad.png" alt="">
                 </div>
                 <div class="info-block">
                     <img class="info-block__mobile-right" src="images/Group-8-mobi.png" alt="">
                     <img class="info-block__mobile-left" src="images/Group-9-mobi.png" alt="">
                 </div>
                 <div class="test-drive">
-                    <img class="test-drive__responsive" src="images/steering-wheel.png" alt="">
+                    <img class="test-drive__responsive" src="images/steering-wheel-pc.svg" alt="">
                     <img class="test-drive__mobile" src="images/steering-wheel.svg" alt="">
                     <p class="test-drive__desk">Тест драйв</p>
                     <div class="order">Заказать</div>
@@ -50,7 +50,6 @@
         <a href="" class="go-bottom"><img src="images/Vector.png" alt=""></a>
     </header>
     <section class="main">
-        <div class="container">
             <div class="main__inner">
                 <div class="left-section">
                     <h2 class="left-section__title">Model S</h2>
@@ -80,10 +79,8 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <footer class="footer">
-        <div class="container">
             <div class="footer__left">
                 <div class="footer__left-head">
                     <h3 class="footer__title">Самый безопасный автомобиль в мире</h3>
@@ -93,9 +90,20 @@
                         переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
                 </div>
                 <div class="footer__left-body">
+                    <h3 class="left-body__title">Оценка защиты:</h3>
                     <div class="rating">
-                        <div class="rating__title">Спереди</div>
+                        <div class="rating__sub-title">Спереди</div>
+                        <div class="rating__star">
+                            <img class="rating__star-img" src="images/Star.png" alt="">
+                            <img class="rating__star-img" src="images/Star.png" alt="">
+                            <img class="rating__star-img" src="images/Star.png" alt="">
+                            <img class="rating__star-img" src="images/Star.png" alt="">
+                            <img class="rating__star-img" src="images/Star.png" alt="">
+                        </div>
                     </div>
+                </div>
+                <div class="rating">
+                    <div class="rating__sub-title">Сбоку</div>
                     <div class="rating__star">
                         <img class="rating__star-img" src="images/Star.png" alt="">
                         <img class="rating__star-img" src="images/Star.png" alt="">
@@ -105,60 +113,51 @@
                     </div>
                 </div>
                 <div class="rating">
-                    <div class="rating__title">Сбоку</div>
-                </div>
-                <div class="rating__star">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                </div>
-                <div class="rating">
-                    <div class="rating__title">Сбоку<span class="rating__add">(стойка)</span></div>
-                </div>
-                <div class="rating__star">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <div class="rating__sub-title">Сбоку<span class="rating__add">(стойка)</span></div>
+                    <div class="rating__star">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                    </div>
                 </div>
                 <div class="rating">
-                    <div class="rating__title">Водитель</div>
+                    <div class="rating__sub-title">Водитель</div>
+                    <div class="rating__star">
+                        <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                    </div>
                 </div>
-                <div class="rating__star">
-                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                </div>
-                <div class="rating">
-                    <div class="rating__title">Пассажир</div>
-                </div>
-                <div class="rating__star">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
+                <div class="rating-second">
+                    <div class="rating__sub-title">Пассажир</div>
+                    <div class="rating__star">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                        <img class="rating__star-img" src="images/Star.png" alt="">
+                    </div>
                 </div>
                 <div class="footer__left-bottom">
-                    <div class="features">
-                        <img class="security" src="images/security.png" alt="">
-                        <div class="features-info">
-                            <img class="features-info__img" src="images/Group.svg" alt="">
-                            <p class="features-info__desk">узнать больше</p>
-                        </div>
-                        <div class="features__order">
-                            <p class="features__order-desk">заказать</p>
-                        </div>
+                    <img class="security" src="images/security.png" alt="">
+                    <div class="footer-info__order">
+                    <div class="footer-info">
+                        <img class="footer-info__img" src="images/Group.svg" alt="">
+                        <p class="footer-info__desk">узнать больше</p>
+                    </div>
+                    <div class="footer__order">
+                        <p class="footer__order-desk">заказать</p>
+                    </div>
                     </div>
                 </div>
             </div>
             <div class="footer__right">
                 <div class="right-pc">
+                    <h3 class="footer__right-title"> Model S</h3>
                     <img class="right-pc__img" src="images/Car-frame-pc.png" alt="">
                 </div>
                 <div class="right-mobi">
@@ -168,7 +167,6 @@
                     <img class="right-ipad__img" src="images/Car-frame-ipad.png" alt="">
                 </div>
             </div>
-        </div>
     </footer>
 </body>
 </html>
