--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <section class="main">
             <div class="main__inner">
                 <div class="left-section">
+                    <img src="images/background-section-mobi.png" alt="" class="left-section__img">
                     <h2 class="left-section__title">Model S</h2>
                 </div>
                 <div class="right-section">
@@ -161,9 +162,11 @@
                     <img class="right-pc__img" src="images/Car-frame-pc.png" alt="">
                 </div>
                 <div class="right-mobi">
+                    <h3 class="footer__right-title"> Model S</h3>
                     <img class="right-mobi__img" src="images/Car-frame-mobi.png" alt="">
                 </div>
                 <div class="right-ipad">
+                    <h3 class="footer__right-title"> Model S</h3>
                     <img class="right-ipad__img" src="images/Car-frame-ipad.png" alt="">
                 </div>
             </div>
